--- a/books/src/App.css
+++ b/books/src/App.css
@@ -43,6 +43,8 @@ nav{
 
 input{
   height: 2vw;
+  padding-left: 15px;
+  font-size: 20px;
 }
 
 #title{
@@ -110,7 +112,7 @@ input{
 }
 .alert{
   font-size: 1vw;
-  color: rgb(141, 5, 5);
+  color: rgb(137, 201, 8);
 }
 
 #submit:hover{
@@ -185,6 +187,9 @@ form{
   text-shadow: 3px 3px 6px black;
 }
 
+.extraArea{
+    height: 5vw;
+}
 @media only screen and (max-width: 600px) {
  
  .books{
@@ -276,6 +281,7 @@ form{
   input{
     width: 35vw;
     height: 6vw;
+    font-size: 12px;
   }
   
 }
